--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="src/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="src/css/style.min.css">
     <title>Uber</title>
 </head>
 <body>
@@ -26,8 +26,8 @@
         <div class="subheader">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 offset-md-1">
-                        <a href="#" class="subheader_logo"><img src="img/icons/logo.png" alt="logo"></a>
+                    <div class="div class="col-md-4" offset-md-1">
+                        <a href="#" class="subheader_logo"><img src="src/img/icons/logo.png" alt="logo"></a>
                         <div class="subheader_official">Official Uber partner in Moscow</div>
                     </div>
     
@@ -37,11 +37,202 @@
                     </div>
     
                     <div class="col-md-2">
-                        <button class="subheader_btn">заказать звонок</button>
+                        <button class="subheader_btn">Request a call</button>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <section class="promo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <h1 class="promo_header">UBER PARTNERS COMPANY</h1>
+                    <h2 class="promo_subheader">WE INVITE DRIVERS! ON YOUR CAR!</h2>
+                    <div class="promo_descr">
+                        UBER is a dynamically developing company. The company occupies 
+                        a leading place in the market among taxi companies, the company 
+                        is absolutely transparent, you can control all processes in your personal 
+                        account. Bonus system. In addition to the work performed on orders, the company 
+                        calculates bonuses for the peak time.
+                        <br> <br>
+                        We are one of the partners and have established ourselves as one of the best 
+                        teams in the city of Moscow. Our drivers earn between 80,000 and 120,000 per month.
+                    </div>
+                    <button class="promo_btn">SEND AN APPLICATION!</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="reasons">
+        <div class="container">
+            <div class="label">advantages</div>
+            <h2 class="title">8 reasons to start working with us</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_1.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">No cash, payment is automatic</div>
+                            <div class="reasons_text">
+                                The cost of the trip is paid by the passenger from the linked bank card, 
+                                i.e. there are no risks associated with the transportation of cash for both 
+                                the passenger and the driver, you do not need to look for small money to exchange.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_2.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Commission 8% + BONUSES</div>
+                            <div class="reasons_text">
+                                We have a minimum commission and we pay bonuses for each trip, some of our competitors 
+                                keep bonuses to themselves. We work honestly and with us drivers earn more!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_3.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">High income with guaranteed payments</div>
+                            <div class="reasons_text">
+                                We pay wages to the driver's personal bank card! You do not need to register an LLC, individual 
+                                entrepreneur, pay taxes, file a declaration, pay for accounting services and maintain a bank account.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_4.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Work at a convenient time, no schedules</div>
+                            <div class="reasons_text">
+                                You simply press the exit line button to get started, when you decide to finish, press the exit line. 
+                                You can only earn extra money in the morning, in the evening, on weekends or on holidays!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_5.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Comfortable, transparent and easy connection</div>
+                            <div class="reasons_text">
+                                We connect remotely and free of charge, you do not need to come to us! You send us copies of documents, 
+                                we register you and send you connection data, in 1-2 days you can start working!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_6.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Always a large number of orders</div>
+                            <div class="reasons_text">
+                                The application shows where there are most orders at the moment and where higher rates apply. You will 
+                                not have idle and idle runs. Our passengers are always pleasant and absolutely conflict-free people who are 
+                                pleasant to carry.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_7.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">24/7 support</div>
+                            <div class="reasons_text">
+                                Uber has 24/7 email support for drivers. If something is not clear, you can always ask a question through 
+                                the On-line consultation.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="src/img/icons/reasons/reason_8.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Without checkers and stickers</div>
+                            <div class="reasons_text">
+                                You do not need to change the color, install "checkers" on the car and paste over it with stickers.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mobile">
+        <div class="container">
+            <div class="label">Capabilities</div>
+            <div class="title">UBER MOBILE APP</div>
+            <div class="subtitle">Make an order, travel and pay using your mobile phone</div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_1">
+                        <div class="mobile_item_subtitle">one touch checkout</div>
+                        <div class="mobile_item_plus"><img src="src/img/icons/plus.png" alt="plus"></div>
+                    </div>
+                </div class="col-md-4">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_2">
+                        <div class="mobile_item_subtitle">reliable feed</div>
+                        <div class="mobile_item_plus"><img src="src/img/icons/plus.png" alt="plus"></div>
+                    </div>
+                </div class="col-md-4">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_3">
+                        <div class="mobile_item_subtitle">transparent prices</div>
+                        <div class="mobile_item_plus"><img src="src/img/icons/plus.png" alt="plus"></div>
+                    </div>
+                </div class="col-md-4">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_4">
+                        <div class="mobile_item_subtitle">cashless payment</div>
+                        <div class="mobile_item_plus"><img src="src/img/icons/plus.png" alt="plus"></div>
+                    </div>
+                </div class="col-md-4">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_5">
+                        <div class="mobile_item_subtitle">Feedback</div>
+                        <div class="mobile_item_plus"><img src="src/img/icons/plus.png" alt="plus"></div>
+                    </div>
+                </div class="col-md-4">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_6">
+                        <div class="mobile_item_subtitle">to split the cost of travel</div>
+                        <div class="mobile_item_plus"><img src="src/img/icons/plus.png" alt="plus"></div>
+                    </div>
+                </div class="col-md-4">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
